--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "@pinia/nuxt": "^0.5.1",
     "@quasar/extras": "^1.16.9",
     "@vuelidate/validators": "^2.0.4",
+    "@vueuse/core": "^10.7.2",
     "axios": "^1.6.7",
+    "date-fns": "^3.3.1",
     "nuxt": "^3.10.1",
     "pinia": "^2.1.7",
     "qs": "^6.11.2",
