--- a/server/package.json
+++ b/server/package.json
@@ -69,15 +69,15 @@
     "@rlanz/bull-queue": "^1.0.6",
     "adonis-responsive-attachment": "^1.5.10",
     "aws-sdk": "^2.1514.0",
+    "knex-postgis": "^0.14.3",
     "luxon": "^3.4.3",
-    "mysql2": "^3.6.1",
+    "pg": "^8.11.3",
     "proxy-addr": "^2.0.7",
     "qs": "^6.11.2",
     "reflect-metadata": "^0.1.13",
     "slugify": "^1.6.6",
     "socket.io": "^4.7.2",
     "source-map-support": "^0.5.21",
-    "sqlite3": "^5.1.6",
     "uni-flatten": "^1.5.5",
     "uuid": "^9.0.1",
     "xlsx": "^0.18.5"
