--- a/server/.adonisrc.json
+++ b/server/.adonisrc.json
@@ -20,6 +20,7 @@
     "./start/routes",
     "./start/kernel",
     "./start/bouncer",
+    "./start/db.ts",
     {
       "file": "./start/validator",
       "environment": [
