--- a/server/.env.example
+++ b/server/.env.example
@@ -4,11 +4,6 @@ NODE_ENV=development
 APP_KEY=PU8FOQkAoZmnKnTP7IJ-Koy3fmvGr0Wj
 DRIVE_DISK=local
 DB_CONNECTION=sqlite
-MYSQL_HOST=127.0.0.1
-MYSQL_PORT=3306
-MYSQL_USER=lucid
-MYSQL_PASSWORD=
-MYSQL_DB_NAME=lucid
 SMTP_HOST=smtp.ethereal.email
 SMTP_PORT=587
 SMTP_USERNAME=casimer.rohan@ethereal.email
@@ -20,7 +15,12 @@ QUEUE_REDIS_HOST=localhost
 QUEUE_REDIS_PORT=6379
 QUEUE_REDIS_PASSWORD=
 
-
+DB_CONNECTION=pg
+PG_HOST=127.0.0.1
+PG_PORT=5412
+PG_USER=postgres
+PG_PASSWORD=123456789
+PG_DB_NAME=urvigo
 
 
 
@@ -32,3 +32,4 @@ CACHE_VIEWS=false
 QUEUE_REDIS_HOST=localhost
 QUEUE_REDIS_PORT=6379
 QUEUE_REDIS_PASSWORD=
+
