--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "adonis-preset-ts/tsconfig.json",
   "include": [
-    "**/*"
+    "**/*",
+    "../1708567743664_vender_users.ts"
   ],
   "exclude": [
     "node_modules",
