--- a/server/package.json
+++ b/server/package.json
@@ -69,6 +69,7 @@
     "@rlanz/bull-queue": "^1.0.6",
     "adonis-responsive-attachment": "^1.5.10",
     "aws-sdk": "^2.1514.0",
+    "bignumber.js": "^9.1.2",
     "knex-postgis": "^0.14.3",
     "luxon": "^3.4.3",
     "pg": "^8.11.3",
