--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,9 @@
     "sass": "^1.70.0",
     "socket.io-client": "^4.7.4",
     "vue": "^3.4.15",
-    "vue-router": "^4.2.5"
+    "vue-picture-swipe": "^2.1.0",
+    "vue-router": "^4.2.5",
+    "vue3-picture-swipe": "^3.0.6"
   },
   "devDependencies": {
     "@types/qs": "^6.9.11",
