--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@ckeditor/ckeditor5-build-classic": "^41.1.0",
     "@ckeditor/ckeditor5-vue": "^5.1.0",
+    "@morioh/v-lightbox": "^1.0.3",
     "@pinia/nuxt": "^0.5.1",
     "@quasar/extras": "^1.16.9",
     "@vuelidate/validators": "^2.0.4",
@@ -25,7 +26,6 @@
     "sass": "^1.70.0",
     "socket.io-client": "^4.7.4",
     "vue": "^3.4.15",
-    "vue-picture-swipe": "^2.1.0",
     "vue-router": "^4.2.5",
     "vue3-picture-swipe": "^3.0.6"
   },
