--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/core": "^10.7.2",
     "axios": "^1.6.7",
+    "bignumber.js": "^4.0.4",
     "date-fns": "^3.3.1",
     "nuxt": "^3.10.1",
     "pinia": "^2.1.7",
