--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "socket.io-client": "^4.7.4",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5",
+    "vue-timeago3": "^2.3.2",
     "vue3-picture-swipe": "^3.0.6"
   },
   "devDependencies": {
