--- a/server/package.json
+++ b/server/package.json
@@ -74,6 +74,7 @@
     "pg": "^8.11.3",
     "proxy-addr": "^2.0.7",
     "qs": "^6.11.2",
+    "razorpay": "^2.9.2",
     "reflect-metadata": "^0.1.13",
     "slugify": "^1.6.6",
     "socket.io": "^4.7.2",
